// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a more precise date 1`] = `
<Tooltip
  overlay={
    <div>
      <DateFromNow
        date={2017-05-16T11:50:02.000Z}
      />
      , 
      <DateTimeFormatter
        date={2017-05-16T11:50:02.000Z}
      />
    </div>
  }
>
  <div
    className="domain-measures-header leak-box"
  >
    overview.new_code_period_x.overview.period.previous_version.6,4
  </div>
</Tooltip>
`;

exports[`should render correctly 1`] = `
<Tooltip
  overlay={
    <div>
      <DateFromNow
        date={2017-05-16T11:50:02.000Z}
      />
      , 
      <DateFormatter
        date={2017-05-16T11:50:02.000Z}
        long={true}
      />
    </div>
  }
>
  <div
    className="domain-measures-header leak-box"
  >
    overview.new_code_period_x.overview.period.previous_version.6,4
  </div>
</Tooltip>
`;

exports[`should render correctly 2`] = `
<div
  className="domain-measures-header leak-box"
>
  overview.new_code_period_x.overview.period.days.18
</div>
`;

exports[`should render correctly for APP 1`] = `
<div
  className="domain-measures-header leak-box"
>
  issues.new_code_period
</div>
`;
